--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <h3>Необходима авторизация. </h3>
 <p>Login &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" size="18" /> <br />
 <p>Password <input type="password" maxlength="25" size="18" /> <br />
-
+<?php
+$a='Hello";
+echo $a;
+?>
 </body>
 </html>
