--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <p>Login &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<input type="text" size="18" /> <br />
 <p>Password <input type="password" maxlength="25" size="18" /> <br />
 <?php
-$a='Hello";
-echo $a;
+$a=1;
+echo $a
 ?>
 </body>
 </html>
